erDiagram
    MEMBERS {
        uuid id PK
        text name
        text email UK
        text ref_code UK
        uuid sponsor_id FK
        text status
        timestamptz created_at
    }

    REFERRAL_EVENTS {
        uuid id PK
        uuid member_id FK
        text ref_code_used
        jsonb utm_json
        timestamptz created_at
    }

    SHOPIFY_CUSTOMERS {
        uuid id PK
        uuid member_id FK UK
        text shopify_customer_id
        timestamptz last_sync_at
        text last_sync_status
        text last_sync_error
    }

    ROLES {
        uuid id PK
        uuid member_id FK UK
        text role
    }

    MEMBERS ||--o{ MEMBERS : "sponsor_id"
    MEMBERS ||--|| REFERRAL_EVENTS : "member_id"
    MEMBERS ||--|| SHOPIFY_CUSTOMERS : "member_id"
    MEMBERS ||--|| ROLES : "member_id"

